Closed Bug 1766412 Opened 3 years ago Closed 1 year ago

Opening profile directory under flatpak no longer works

Categories

(Core :: Widget: Gtk, defect, P3)

defect

Tracking

()

RESOLVED FIXED
129 Branch
Tracking Status
firefox129 --- fixed

People

(Reporter: jhorak, Assigned: jgrulich)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

  1. open firefox for flatpak
  2. Go to about:profiles
  3. try to open Local Directory by pressing Open directory button.

Failing on Fedora 36. Filled upstream issue: https://gitlab.gnome.org/GNOME/glib/-/issues/2642

Blocks: flatpak
Priority: -- → P3
See Also: → 1859841

Opening directories (aka RevealDirectory) should by default go through
xdg-desktop-portal when we run Firefox as a Flatpak o Snap. This avoids
secret failures when using g_app_info_launch_default_for_uri().

Assignee: nobody → jgrulich
Status: NEW → ASSIGNED
Attachment #9406408 - Attachment description: Bug 1766412 - Flatpak: open directories through portal by default when in sandbox r=stransky,jhorak → Bug 1766412 - Flatpak: open directories through portal by default when in sandbox r=stransky,jhorak,emilio
Pushed by jgrulich@redhat.com: https://hg.mozilla.org/integration/autoland/rev/7a42cfe46ccc Flatpak: open directories through portal by default when in sandbox r=stransky
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 129 Branch
QA Whiteboard: [qa-129b-p2]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: