Bug 1766412 - Flatpak: open directories through portal by default when in sandbox  r=stransky

Opening directories (aka RevealDirectory) should by default go through
xdg-desktop-portal when we run Firefox as a Flatpak or Snap. This avoids
secret failures when using g_app_info_launch_default_for_uri().

Differential Revision: https://phabricator.services.mozilla.com/D213076